Fix bug | delete dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -78,7 +78,7 @@ button:focus-visible {
   /* a:hover {
     color: #747bff;
   } */
-}
+/* } */ 
 
 /*  Scrolling bar look */
 
